--- a/006_function.html
+++ b/006_function.html
@@ -28,6 +28,41 @@
             print(summ);
             print("</br>");
             print(summ % 11);
+
+            //https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/basic-javascript/stand-in-line
+            function nextInLine(arr, item) {
+            arr.push(item);
+            return arr.shift();
+            }
+
+            var testArr = [1,2,3,4,5];
+
+            document.writeln("</br>" + "Before: " + JSON.stringify(testArr));
+            document.writeln("</br>" + nextInLine(testArr, 6));
+            document.writeln("</br>" + "After: " + JSON.stringify(testArr));
+            //
+            var names = ["Hole-in-one!", "Eagle", "Birdie", "Par", "Bogey", "Double Bogey", "Go Home!"];
+                function golfScore(par, strokes) {
+                if (strokes == 1) {
+                return names[0]
+                } else if ( strokes <= par - 2 ) {
+                return names[1]
+                } else if ( strokes == par - 1 ) {
+                return names[2]
+                } else if ( strokes == par ) {
+                return names[3]
+                } else if ( strokes == par + 1 ) {
+                return names[4]
+                } else if ( strokes == par + 2 ) {
+                return names[5]
+                } else if ( strokes => par + 3 ) {
+                return names[6]
+                } else
+                return "Change Me";
+                }
+                golfScore(5, 4);
+
+                //
         </script>
 
     </body>
