--- a/004_Arrays.html
+++ b/004_Arrays.html
@@ -51,6 +51,22 @@
             ourArray.unshift("Happy");  
             document.writeln( "</br>" + ourArray[0]);                                                    
 
+            var myArray = [["John", 23], ["cat", 2]];
+            myArray.push(["dog", 3])
+
+            var threeArr = [1, 4, 6];
+            var oneDown = threeArr.pop();
+
+            var ourArray = ["Stimpson", "J", ["cat"]];
+            var removedFromOurArray = ourArray.shift();
+            // removedFromOurArray now equals "Stimpson" and ourArray now equals ["J", ["cat"]].
+
+            var ourArray = ["Stimpson", "J", "cat"];
+            ourArray.shift(); // ourArray now equals ["J", "cat"]
+            ourArray.unshift("Happy");
+            // ourArray now equals ["Happy", "J", "cat"]
+
+            
         </script>
 
     </body>
